# H4B-Quantum_Rebels

./: README.md  package-lock.json
Agent/: .env.example  pyproject.toml
Agent/embedding/: README.md  app.py  chunking.py  config.py  db.py  model.py  requirements.txt  schemas.py  services.py
Agent/generator/: app.py  llm_client.py  prompt_template.py  prompt_templates.py  requirements.txt  schemas.py  utils.py
Agent/orchestrator/: README.md  agent.py  app.py  clients.py  config.py  memory.py  requirements.txt  schemas.py  tools.py
Agent/retrieval/: README.md  app.py  schemas.py  test_section_retrieval.py  utils.py
Agent/scoring/: README.md  app.py  feature_extractor.py  llm_client.py  requirements.txt  schemas.py  suggestion_client.py
backend/: package-lock.json  package.json  server.js
backend/Routes/: SocialConnectRoutes.js  UserRoutes.js
backend/controllers/: JobController.js  SocialConnectController.js  auth.js
backend/db/: db.js
backend/models/: profiles.models.js  social_connect.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/company_dashboard/: company-dashboard.jsx  joblist.jsx  newjobmodal.jsx  welcome.jsx
frontend/src/components/dashboard/: welcome.jsx
frontend/src/components/job/: job.jsx
frontend/src/components/landing/: Navbar.jsx
frontend/src/components/login/: login.jsx
frontend/src/components/register/: register.jsx
frontend/src/components/resume_builder/: chatwindow.jsx  live.jsx  (+4 more)
frontend/src/pages/: company-dashboard.jsx  resume-builder.jsx
(+3 files in other folders)
