[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "nltk>=3.9.1",
    "numpy>=2.3.0",
    "pydantic>=2.11.7",
    "pymongo[srv]>=4.13.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.1",
    "uvicorn[standard]>=0.34.3",
]
