[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-google-genai>=2.1.5",
    "nltk>=3.9.1",
    "numpy>=2.3.0",
    "pydantic>=2.11.7",
    "pymongo[srv]>=4.13.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "redis>=6.2.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.1",
    "uvicorn[standard]>=0.34.3",
]
